--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -512,7 +512,7 @@ input[type=checkbox]:not(:disabled).tabbed:focus~.lever::after {
 
 @font-face {
 	font-family: Material-Design-Iconic-Font;
-	src: url(./assets/fonts/Material-Design-Iconic-Font.woff2?v=2.2.0) format("woff2"), url(./assets/fonts/Material-Design-Iconic-Font.woff?v=2.2.0) format("woff"), url(./assets/fonts/Material-Design-Iconic-Font.ttf?v=2.2.0) format("truetype")
+	src: url(../fonts/Material-Design-Iconic-Font.woff2?v=2.2.0) format("woff2"), url(../fonts/Material-Design-Iconic-Font.woff?v=2.2.0) format("woff"), url(../fonts/Material-Design-Iconic-Font.ttf?v=2.2.0) format("truetype")
 }
 
 .zmdi {
@@ -21852,7 +21852,7 @@ fieldset[disabled] .form-control {
 	max-width: 360px;
 	margin: 5% auto;
 	overflow-x: hidden;
-	background-image: url("./assets/images/bg-1.jpg");
+	background-image: url("../images/bg-1.jpg");
 	background-size: cover;
 	background-position: top center
 }
@@ -21962,7 +21962,7 @@ fieldset[disabled] .form-control {
 
 .profile-page .profile-header {
 	color: #fff;
-	background: rgba(0, 0, 0, 0) url("./assets/images/profile-bg.jpg") repeat scroll center center/cover;
+	background: rgba(0, 0, 0, 0) url("../images/profile-bg.jpg") repeat scroll center center/cover;
 	position: relative;
 	border-radius: 3px 3px 0 0
 }
@@ -22955,7 +22955,7 @@ html.ie11 .bs-searchbox .form-control {
 	overflow: hidden;
 	right: 0;
 	top: 30%;
-	background: transparent url(./assets/images/magnifier.svg) no-repeat center center;
+	background: transparent url(../images/magnifier.svg) no-repeat center center;
 	background-size: 100%;
 	border: none;
 	pointer-events: none;
