--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,3 @@
-<!-- Page Loader -->
-<DIV class="page-loader-wrapper">
-   <DIV class="loader">
-      <DIV class="preloader">
-         <DIV class="spinner-layer pl-red">
-            <DIV class="circle-clipper left">
-               <DIV class="circle"></DIV>
-            </DIV>
-            <DIV class="circle-clipper right">
-               <DIV class="circle"></DIV>
-            </DIV>
-         </DIV>
-      </DIV>
-      <P>Please wait...</P>
-   </DIV>
-</DIV>
 <!-- Overlay For Sidebars -->
 <DIV class="overlay"></DIV>
 <!-- #Float icon -->
@@ -23,12 +7,10 @@
             class="mfbcm-icon-active zmdi zmdi-close"></I>
       </A>
       <UL class="mfbc_list">
-         <LI><A class="mfb-child bg-blue" href="https://thememakker.com/templates/swift/hospital/doctor-schedule.html"
+         <LI><A class="mfb-child bg-blue" [routerLink]='patient' 
                data-mfb-label="Doctor Schedule"><I class="zmdi zmdi-calendar mfbc_icon"></I></A></LI>
-         <LI><A class="mfb-child bg-orange" href="https://thememakker.com/templates/swift/hospital/patients.html"
+         <LI><A class="mfb-child bg-orange" [routerLink]='patient' 
                data-mfb-label="Patients List"><I class="zmdi zmdi-account-o mfbc_icon"></I></A></LI>
-         <LI><A class="mfb-child bg-purple" href="https://thememakker.com/templates/swift/hospital/payments.html"
-               data-mfb-label="Payments"><I class="zmdi zmdi-balance-wallet mfbc_icon"></I></A></LI>
       </UL>
    </LI>
 </UL>
@@ -653,7 +635,8 @@
    </ASIDE>
 </SECTION>
 <SECTION class="content patients">
-   <DIV class="container-fluid">
+  <router-outlet></router-outlet>
+  <!-- <DIV class="container-fluid">
       <DIV class="block-header">
          <H2>All Patients</H2>
          <SMALL class="text-muted">Welcome to Swift
@@ -861,7 +844,7 @@
             </DIV>
          </DIV>
       </DIV>
-   </DIV>
+   </DIV>-->
 </SECTION>
 <DIV class="color-bg"></DIV>
 
